main-section-added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <script src="https://kit.fontawesome.com/80133de64f.js" crossorigin="anonymous"></script>
 </head>
 <body>
- <nav>
+<header class="header-1">
+    <nav>
     <input type="checkbox" id="check">
     <label for="check" class="checkbtn">
         <i class="fas fa-bars"></i>
@@ -23,10 +24,42 @@
         <li><a href="#">Contact Us</a></li>
         <li><a href="#">Login</a></li>
     </ul>
+    </nav>
      <div class="banar-title">
         <h1>Brand New<br>Group of Architects</h1>
     </div>
- </nav>
+    <div class="banar-text">
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in<br> some form, by injected humour, or randomised words which don't look even</p>
+    </div>
+    <div class="btn-1"><button class="btn">Explore More</button></div>
+     <img src="../ast-2/images/banner.png" alt="">
+</header>
+
+        <!-- --------main----section-------- -->
+<main class="main-1">
+    <div class="main-2 left">
+        <div class="main-img">
+            <img class="team-img" src="../ast-2/images/team1.png" alt="">
+        </div>
+        <div class="main-img">
+            <img class="team-img" src="../ast-2/images/team2.png" alt="">
+        </div>
+        <div class="main-img">
+            <img class="team-img" src="../ast-2/images/team3.png" alt="">
+        </div>
+        <div class="main-img">
+            <img class="team-img" src="../ast-2/images/team4.png" alt="">
+        </div>
+    </div>
+    <div class="main-3 right">
+        <div class="main-title"><h3><span class="main-title-1">Quick list</span> of Our </h3></div>
+        <div class="main-title-2"><h3>Features</h3></div>
+        <div class="main-text">
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+        </div>
+        <div class="main-btn"><button class="btn"> Expolre More</button></div>
+    </div>
+</main>
 </body>
 </html>
        
