--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>G3 Architects</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
         <!-- font awosome link -->
@@ -60,6 +60,49 @@
         <div class="main-btn"><button class="btn"> Expolre More</button></div>
     </div>
 </main>
+
+<!-- --------------feature-------section-------- -->
+
+<div class="feature-section">
+    <div class="feature-text left">
+        <div class="vertical-line"></div>
+        <div class="feature-title">
+            <h3>Features you will<br>love & enjoy</h3>
+        </div>
+        <div class="feature-section-text">
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+        </div>
+    <div class="feature-box">
+        <div class="feature-title-1">
+            <h3>Dexktop & Mobile Version</h3>
+        </div>
+        <div class="feature-text-1">
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+        </div>
+    </div>
+    <div class="feature-box">
+        <div class="feature-title-1">
+            <h3>Dexktop & Mobile Version</h3>
+        </div>
+        <div class="feature-text-1">
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+        </div>
+    </div>
+    <div class="feature-box">
+        <div class="feature-title-1">
+            <h3>Dexktop & Mobile Version</h3>
+        </div>
+        <div class="feature-text-1">
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+        </div>
+    </div>
+    </div>
+    <div class="feature-img right">
+        <img  id="feature-imge" src="../ast-2/images/architect.png" alt="#">
+    </div>
+    <div class="btn-2"><button class="btn-3"> <span class="span-btn">10+Year</span><br> Experence </button></div>
+</div>
+
 </body>
 </html>
        
